--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "BlockSparseMatrices"
 uuid = "1ef78180-cc57-4e70-b6ec-c3e471307147"
 authors = ["djukic14 <danijel.jukic14@gmail.com> and contributors"]
-version = "1.0.0-DEV"
+version = "0.0.1"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -10,6 +10,7 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
 julia = "1"
+LinearMaps = "3"
 
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
