--- a/Project.toml
+++ b/Project.toml
@@ -6,11 +6,13 @@ version = "0.0.1"
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearMaps = "7a12625a-238d-50fd-b39a-03d52299707e"
+OhMyThreads = "67456a42-1dca-4109-a031-0a68de7e3ad5"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
 julia = "1"
 LinearMaps = "3"
+OhMyThreads = "0.8.3"
 
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
