--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,9 @@
 [deps]
+BEAST = "bb4162c7-ba94-5a20-af32-d8ec4428bdd1"
 BlockSparseMatrices = "1ef78180-cc57-4e70-b6ec-c3e471307147"
+CompScienceMeshes = "3e66a162-7b8c-5da0-b8f8-124ecd2c3ae1"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+GmshTools = "82e2f556-b1bd-5f1a-9576-f93c0da5f0ee"
+H2Trees = "9db26ae3-82ff-4374-85e9-9ed87405fd16"
+OhMyThreads = "67456a42-1dca-4109-a031-0a68de7e3ad5"
+UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
