update LinearMaps dependency

--- a/Project.toml
+++ b/Project.toml
@@ -24,7 +24,7 @@ GraphsColoring = "0.2.0"
 JLD2 = "0.6"
 JuliaFormatter = "2.1"
 LinearAlgebra = "1"
-LinearMaps = "3.5"
+LinearMaps = "3.7 - 3.9, 3.11"
 OhMyThreads = "0.8.3"
 SparseArrays = "1"
 Test = "1"
